<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
        <!ENTITY appname "Magnet Link Search">
        <!ENTITY author "ice">
        ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Magnet Link Search</string>
    <string name="nav_header_subtitle">webmaster@makebot.club</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="keywords">keywords</string>
    <string name="submit">&#160;&#160;Search&#160;&#160;  </string>
    <string name="send_mail">&#160;&#160;Send&#160;&#160;  </string>
    <string name="of">/</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="nodata">There is nothing.</string>
    <string name="error">There is something wrong.</string>
    <string name="title">Magnet Link Search</string>
    <string name="quote">
        > ***Human Knowledge Belongs To The World !***\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;---- from \' ***AntiTrust*** \'
    </string>
    <string name="input_less" formatted="true">No more than %d characters.</string>
    <string name="input_more" formatted="true">No Less than %d characters.</string>
    <string name="click_twice">Press BACK twice to Exit.</string>
    <string name="info_title">File Infomation</string>
    <string name="description_close">close</string>
    <string name="loading">Loading in progress.</string>
    <string name="no_parameter">Internal Error.</string>
    <string name="loaded">Loading finish.</string>
    <string name="network_error">Load fails.</string>
    <string name="file_unit" formatted="true">%d files</string>
    <string name="Communication">Communication</string>
    <string name="share">Share App</string>
    <string name="send">To Author</string>
    <string name="report_content">Content</string>
    <string name="to_author">Dear author,</string>
    <string name="email">me@world.com</string>
    <string name="wait">Wait a minute.</string>
    <string name="from_email">From</string>
    <string name="end">Best Regards.</string>
    <string name="network_wifi">Connected to WIFI.</string>
    <string name="network_mobile">Connected to cellular.</string>
    <string name="network_none">Disconnected.</string>
    <string name="nav_website">Website</string>
    <string name="total_count">%1$s magnets in our database.</string>
    <string name="MapperError">Mapper Exception: %1$s.</string>
    <string name="email_subject">[ Magnet Link ] %1$s</string>
    <string name="email_chooser">Please Select Email App.</string>
    <string name="email_body_title">Welcome to use Magnet Link Seeker.</string>
    <string name="email_body_url">LINK:\t\t</string>
    <string name="email_body_name">NAME:\t\t</string>
    <string name="email_body_size">SIZE:\t\t</string>
    <string name="email_body_count">FILES:\t\t</string>
    <string name="email_body_timestamp">TIME:\t\t</string>
    <string name="short_app_description">QR Code Created by &appname; </string>
</resources>
