<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/to_author"
              android:layout_marginTop="@dimen/mail_margin_top"
              android:layout_marginStart="@dimen/mail_margin_start"
              android:layout_marginEnd="@dimen/mail_margin_end"
              android:layout_gravity="start"
              android:id="@+id/title"
              android:textSize="20sp"
              android:textStyle="bold"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/mail_margin_top"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/from_email"
                  android:layout_marginStart="@dimen/mail_margin_start"
                  android:textSize="16sp"
                  android:layout_gravity="start|center_vertical"
                  android:textStyle="bold"/>
        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginStart="@dimen/mail_margin_start"
                  android:layout_marginEnd="@dimen/mail_margin_end"
                  android:layout_gravity="center_vertical"
                  android:maxEms="20"
                  android:maxLines="1"
                  android:hint="@string/email"
                  android:id="@+id/address"
                  android:inputType="textEmailAddress"/>
    </LinearLayout>
    <Spinner android:layout_width="match_parent"
             android:layout_height="32dp"
             android:id="@+id/select"
             android:layout_marginTop="@dimen/mail_margin_top"
             android:layout_marginStart="@dimen/mail_margin_start"
             android:layout_marginEnd="@dimen/mail_margin_end"
             android:entries="@array/type"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="200dp"
              android:layout_weight="1"
              android:layout_marginTop="@dimen/mail_margin_top"
              android:layout_marginStart="@dimen/mail_margin_start"
              android:layout_marginEnd="@dimen/mail_margin_end"
              android:maxLines="20"
              android:singleLine="false"
              android:hint="@string/report_content"
              android:id="@+id/content"
              android:background="@null"
              android:gravity="start|top"
              android:scrollHorizontally="false"
              android:inputType="textMultiLine"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/end"
              android:layout_marginTop="@dimen/mail_margin_top"
              android:layout_marginEnd="@dimen/mail_margin_end"
              android:layout_gravity="end|center_vertical"
              android:textSize="16sp"
              android:textStyle="bold"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mail_margin_top"
            android:layout_marginBottom="@dimen/mail_margin_end"
            android:text="@string/send_mail"
            android:id="@+id/submit"/>
</LinearLayout>